# consumer-dashboard

./: .env.example  .gitignore  Consumer data master tracking table.xlsx  Consumer reports general information.docx  README.md  US_Consumer_Dashboard.xlsx  consumer_dashboard_strategy.md  consumer_reports_manifest.csv  project_orchestration_blueprint.md  pyproject.toml  ~$nsumer reports general information.docx
.claude/: launch.json  settings.local.json
.github/workflows/: dashboard.yml
config/: README.md  sources.example.yaml
consumer_dashboard/: __init__.py  cli.py
consumer_dashboard/config/: registry.py  settings.py
consumer_dashboard/dashboard/: __init__.py  datasets.py  html.py  views.py
consumer_dashboard/metrics/: __init__.py  cohort.py  common.py  credit.py  dfa.py  housing.py  inflation.py  labor.py  real_income.py  real_spending.py  regime.py  savings.py
consumer_dashboard/models/: observation.py  release.py  series.py  snapshot.py
consumer_dashboard/pipeline/: backfill.py  derive.py  ingest.py  normalize.py  refresh.py
consumer_dashboard/reporting/: __init__.py  ai_reports.py  memo.py  status.py
consumer_dashboard/sources/: __init__.py  base.py  bea.py  bls.py  census.py  conference_board.py  dol.py  fed.py  michigan.py  nar.py  nyfed.py
consumer_dashboard/storage/: catalog.py  filesystem.py  state.py
consumer_dashboard/transform/: normalize_bea.py  normalize_bls.py  normalize_census.py  normalize_dfa.py  normalize_dol.py  normalize_fed.py  normalize_michigan.py  normalize_nyfed.py
data/processed/: ai_reports.json
(+23 files in other folders)
