[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "consumer-dashboard"
version = "0.1.0"
description = "A first-principles pipeline for tracking the U.S. consumer."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "httpx>=0.27,<1",
  "openpyxl>=3.1,<4",
  "pandas>=2.2,<3",
  "pydantic>=2.7,<3",
  "pyarrow>=15,<20",
  "python-dotenv>=1.0,<2",
  "tenacity>=8.2,<10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<6",
  "ruff>=0.4,<1",
  "mypy>=1.10,<2",
]

[project.scripts]
consumer-dashboard = "consumer_dashboard.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["consumer_dashboard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
